fixes spacing between each section

--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -10,8 +10,8 @@ body {
 h1 {text-align: center;}
 
 h2, h3 {
-    padding: 5px;
-    margin: 1em;
+    padding: 0px;
+    margin: 0em;
 }
 
 .container {
@@ -37,7 +37,9 @@ h2, h3 {
     padding: 1em;
     margin: 0 auto;
     /* enter needed declarations here */
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 section {
@@ -84,12 +86,13 @@ section:nth-of-type(1) div:last-child {
 section:nth-of-type(3) {
     /* enter needed declarations here */
     display: flex;
+    align-content: baseline;
 }
 
 section:nth-of-type(3) h3 {
     /* enter needed declarations here */
-    flex-grow: 2;
-    align-content: center;
+    flex-grow: 1;
+    align-self: center;
 }
 
 .orange-circle {
